js/src/tests/test262/built-ins/Error/prototype/stack/setter-proxy-trap-throws.js

























var set = Object.getOwnPropertyDescriptor(Error.prototype, 'stack').set;

function Sentinel() {}


var pA = new Proxy({}, {
  getOwnPropertyDescriptor: function () {
    throw new Sentinel();
  },
});
assert.throws(Sentinel, function () {
  set.call(pA, 'v');
}, 'getOwnPropertyDescriptor trap throw');


var pB = new Proxy({}, {
  defineProperty: function () {
    throw new Sentinel();
  },
});
assert.throws(Sentinel, function () {
  set.call(pB, 'v');
}, 'defineProperty trap throw');


var pC = new Proxy({ stack: 'old' }, {
  set: function () {
    throw new Sentinel();
  },
});
assert.throws(Sentinel, function () {
  set.call(pC, 'v');
}, 'set trap throw');

reportCompare(0, 0);
